fix it being off-center

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -63,13 +63,13 @@ html
     @include span-columns(12)
     @media screen and (min-width: 40em)
       @include span-columns(9)
-      @include shift(2)
+      @include shift(1.5)
 
   footer
     @include outer-container
     @media screen and (min-width: 40em)
       @include span-columns(9)
-      @include shift(2)
+      @include shift(1.5)
     p
       margin-bottom: 2rem
       &.small
